Session 3: Claude integration, 5 API keys, CTO agent rewrite
- Added Claude API for CEO/CTO intelligence (_call_claude in orchestrator.py)
- Created CLAUDE_CONTEXT.md for context injection
- Rewrote .github/agents/cto.md for RL framework focus
- Added 5 Google API keys support (50 RPM vs 10)
- Fixed buggy-backend health check (:3001)
- Better finding deduplication (skip error findings)
- Lowered mission complete threshold to 1.5 reward
- Updated CONTEXT_HANDOFF.md, README.md with log documentation
- Removed redundant docs (MIGRATE, PYTHON_SETUP, DEMO_SCRIPT, DEMO_CHECKLIST)
- Updated .gitignore for transient files

Demo now consistently finds SQLi, CEO eval 65/100

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ final_exploit_plan.json
 executive_report_*.html
 agent_logs.jsonl
 orchestrator_*
+demo_output.log
+qa_results.json
 
 # Python
 __pycache__/
