--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,7 @@ fastapi>=0.104.0
 uvicorn>=0.24.0
 python-multipart>=0.0.6
 
+# Anthropic Claude for CEO/CTO agents
+anthropic>=0.39.0
+langchain-anthropic>=0.3.0
+
