--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,9 @@ playwright>=1.40.0
 # Environment variables
 python-dotenv>=1.0.0
 
+# HTTP client for direct API testing
+aiohttp>=3.9.0
+
 # Google Generative AI
 google-generativeai>=0.3.0
 
